--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -19,6 +19,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: npm install, build, and test
       run: |
-        cd ${{ github.repository }}/catering && npm ci && npm run build --if-present
+        cd /catering && npm ci && npm run build --if-present
       env:
         CI: true
