--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -19,6 +19,11 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: npm install, build, and test
       run: |
-        cd catering && npm ci && npm run build --if-present
+        # install dependencies
+        cd catering && npm ci
+        
+        # Run server
+        cd catering && node cateringServer.js
+        
       env:
         CI: true
