--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -26,7 +26,7 @@ jobs:
         # Run server
         
         node cateringServer.js
-        killall node
+        kill
         
       env:
         CI: true
