--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,8 +25,8 @@ jobs:
         
         # Run server
         
-        node cateringServer.js
-        kill
+        node cateringServer.js &
+        kill %1
         
       env:
         CI: true
